# material_fit

./: .gitattributes  .gitignore  AGENTS.md  README.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json  pyproject.toml
examples/: README.md
material_fit/: .gitignore  AGENT_ONBOARDING.md  IntegrationDifficulties.md  LLMContextPrompt.md  README.md  __init__.py  doctor.py  fit_artifacts.py  fit_batch_execution.py  fit_cli.py  fit_config.example.json  fit_material.py  fit_single_execution.py
material_fit_ui/: .gitignore  README.md  launch.bat  launch.py  requirements.txt
scripts/: analyze_foreground_color_stats.py  bootstrap.ps1  bootstrap.sh  check_playwright.js  check_windows_quickstart.ps1  cleanup_material_fit_background.ps1  ensure_node.sh  ensure_persistent_laya_queue.ps1  ensure_persistent_laya_queue.sh  ensure_remote_style_laya_worker.ps1  ensure_remote_style_laya_worker_wsl.ps1  inspect_laya_mesh.py  package_1613_result.ps1  package_1613_result.sh  run_1613_fit.ps1  run_1613_fit.sh  run_fish_core_experiment.ps1  run_fish_core_experiment.sh  run_fish_finetune.ps1  run_fish_finetune.sh  run_fish_visual_contract.ps1  run_fish_visual_contract.sh  run_fish_zero_start.ps1  run_fish_zero_start.sh  run_material_phase05.ps1  run_material_phase05.sh  run_material_phase05_multistart.sh  run_remote_exact_snapshot_replay.ps1  run_stage1.ps1  run_stage1.sh  start_local_laya_runtime_renderer.ps1  stop_persistent_laya_queue.ps1  stop_persistent_laya_queue.sh  stop_remote_style_laya_worker.ps1  stop_remote_style_laya_worker_wsl.ps1
tools/: __init__.py
(+397 files in other folders)
